--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -3,6 +3,27 @@
     padding: 0;
     margin: 0;
   }
+  body{
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: aquamarine;
+      margin: 0;
+      border-radius: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      background: rgb(3, 0, 36);
+      border-radius: 40px;  
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: rgb(210, 177, 255);
+    }
+  }
   main {
     .greet {
       display: flex;
@@ -110,8 +131,19 @@
     }
     .enrollmentforms{
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
+        
         min-height: 100vh;
+      .leftContents{
+        h1{
+          font-size: 70px;
+        }
+      }
+      .rightcontent{
+        img{
+          height: 800px;
+        }
+      }
     }
   }
