--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -5,7 +5,7 @@
   }
   body{
     &::-webkit-scrollbar {
-      width: 8px;
+      width: 10px;
     }
 
     &::-webkit-scrollbar-track {
@@ -133,16 +133,103 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        
         min-height: 100vh;
+
       .leftContents{
+        display: flex;
+        align-items: center;
+        justify-content: right;
+        svg{
+          height: 800px;
+          position: absolute;
+          z-index: -1;
+        }
         h1{
-          font-size: 70px;
+          line-height: 80px;
+          color: navy;
+          font-size: 80px;
         }
       }
       .rightcontent{
         img{
           height: 800px;
+        }
+      }
+    }
+    .wtg{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      flex-direction: column;
+      background-image: linear-gradient(to bottom, white, rgb(207, 207, 255) 90%);
+      h1{
+        margin-bottom: 40px;
+        font-size: 80px;
+      }
+      
+      .facilities{
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        .location{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          img{
+            box-shadow: 10px 5px 10px solid rgba(0, 0, 0, 0.808);
+            height: 400px;
+            border-radius: 20px;
+          }
+          .details{
+            margin: 30px;
+            width: 900px;
+            h1{
+              font-size: 60px;
+              margin: 0;
+            }
+            
+            p{
+              font-size: 20px;
+              margin: 10px 0px;
+            }
+            .visayan{
+              font-style: italic;
+            }
+          }
+        }
+      }
+      .facilities-rev{
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        .location{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row-reverse;
+          img{
+            height: 400px;
+            border-radius: 20px;
+          }
+          .details{
+            margin: 30px;
+            width: 900px;
+            h1{
+              text-align: right;
+              font-size: 60px;
+              margin: 0;
+            }
+            
+            p{
+              text-align: right;
+              font-size: 20px;
+              margin: 10px 0px;
+            }
+            .visayan{
+              font-style: italic;
+            }
+          }
         }
       }
     }
