--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -177,7 +177,7 @@
           justify-content: center;
           align-items: center;
           img{
-            box-shadow: 10px 5px 10px solid rgba(0, 0, 0, 0.808);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.189);
             height: 400px;
             border-radius: 20px;
           }
@@ -231,6 +231,47 @@
             }
           }
         }
+      }
+    }
+
+    .forms{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      flex-direction: column;
+      h1{
+        font-size: 80px;
+      }
+      .formsContainer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .singleform{
+          margin: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          h3{
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
+            text-align: center;
+            margin: 10px;
+            padding: 10px;
+            width: 200px;
+            border-radius: 20px;
+          }
+          .formImages{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+              box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
+              height: 100px;
+            }
+          }
+        }
+       
       }
     }
   }
