--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
   }
+  html{
+    scroll-behavior: smooth;
+  }
   body{
     &::-webkit-scrollbar {
       width: 10px;
@@ -38,6 +41,7 @@
     }
   }
   main {
+
     .greet {
       display: flex;
       justify-content: center;
@@ -280,7 +284,7 @@
             align-items: center;
             img{
               box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
-              height: 100px;
+              height: 200px;
             }
           }
         }
