--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -291,4 +291,22 @@
        
       }
     }
+    .diploma{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .shortTerm{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .communityBased{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
   }
