--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -1,344 +1,374 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 * {
-    box-sizing: border-box;
-    padding: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", "San Serif";
+}
+html {
+  scroll-behavior: smooth;
+}
+body {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: aquamarine;
     margin: 0;
-    font-family: 'Poppins', 'San Serif';
+    border-radius: 10px;
   }
-  html{
-    scroll-behavior: smooth;
-  }
-  body{
-    
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
 
-    &::-webkit-scrollbar-track {
-      background-color: aquamarine;
-      margin: 0;
-      border-radius: 10px;
-    }
-    
-    &::-webkit-scrollbar-thumb {
-      background: rgb(3, 0, 36);
-      border-radius: 40px;  
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: rgb(210, 177, 255);
-    }
+  &::-webkit-scrollbar-thumb {
+    background: rgb(3, 0, 36);
+    border-radius: 40px;
   }
-  .bodyContainer{
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgb(210, 177, 255);
+  }
+}
+.bodyContainer {
+  display: flex;
+}
+.sideBar {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 255, 255, 0.381);
+  backdrop-filter: blur(10px);
+
+  .sidebtns {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    a {
+      padding: 20px 50px;
+      img {
+        height: 25px;
+      }
+      &:focus {
+        border-bottom: 2px solid navy;
+      }
+    }
   }
-  .sideBar{
-    position: sticky;
-    top: 0;
+}
+main {
+  .greet {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 255, 255, 0.381);
-    backdrop-filter: blur(10px);
-
-    .sidebtns{  
+    min-height: 100vh;
+    background-image: linear-gradient(
+      to left,
+      rgb(234, 234, 234),
+      rgb(229, 234, 253)
+    );
+    .greetContents {
       display: flex;
+      justify-content: center;
       align-items: center;
-      justify-content: space-between;
-      gap: 10px;
-      a{
-        
-        padding: 20px 50px;
-        img{
-          height: 25px;
-        }
-        &:active{
-          border-bottom: 2px solid navy;
+      flex-direction: column;
+      h1 {
+        font-size: 100px;
+      }
+      p {
+        text-align: center;
+        font-size: 20px;
+        width: 800px;
+      }
+      .homeBtns {
+        margin: 20px;
+        button {
+          border: none;
+          box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.209);
+          border-radius: 10px;
+          background-color: skyblue;
+          margin: 0px 10px;
+          width: 200px;
+          padding: 20px;
         }
       }
     }
   }
-  main {
 
-    .greet {
+  .offeredProgram {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    svg {
+      z-index: -1;
+      position: absolute;
+      height: 1000px;
+    }
+    h1 {
+      color: navy;
+      font-size: 100px;
+    }
+    .programContainer {
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      background-image: linear-gradient(
-        to left,
-        rgb(234, 234, 234),
-        rgb(229, 234, 253)
-      );
-      .greetContents {
+      .contentCard {
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.151);
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 10px;
+        padding: 10px;
+        background-image: linear-gradient(
+          45deg,
+          rgb(255, 246, 246),
+          rgb(235, 235, 255)
+        );
+        width: 320px;
+        height: 500px;
+        margin: 20px;
+
+        h3 {
+          width: 250px;
+        }
+
+        p {
+          width: 250px;
+        }
+
+        button {
+          margin: 5px 10px;
+          padding: 20px;
+          width: 200px;
+          background-color: navy;
+          border: none;
+          border-radius: 5px;
+          transition: 0.5s;
+
+          &:hover {
+            cursor: pointer;
+            scale: 1.01;
+          }
+
+          a {
+            text-decoration: none;
+            color: white;
+          }
+        }
+      }
+    }
+  }
+  .enrollmentforms {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    min-height: 100vh;
+
+    .leftContents {
+      display: flex;
+      align-items: center;
+      justify-content: right;
+      svg {
+        height: 800px;
+        position: absolute;
+        z-index: -1;
+      }
+      h1 {
+        line-height: 80px;
+        color: navy;
+        font-size: 80px;
+      }
+    }
+    .rightcontent {
+      img {
+        height: 800px;
+      }
+    }
+  }
+  .wtg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    background-image: linear-gradient(to bottom, white, rgb(207, 207, 255) 90%);
+    h1 {
+      margin-bottom: 40px;
+      font-size: 80px;
+    }
+    .startTour {
+      margin-bottom: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      width: 700px;
+      p {
+        text-align: center;
+        width: 700px;
+      }
+      img {
+        height: 50px;
+        margin: 20px;
+      }
+      a {
+        text-decoration: none;
+        padding: 20px;
+        background-color: white;
+        border-radius: 20px;
+        box-shadow: 5px 5px 10px rgba(41, 20, 20, 0.106);
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 20px;
+        flex-direction: column;
+        
+        
+        h3{
+          font-size: 30px;
+          margin: 20px;
+        }
+        
+      }
+    }
+    .facilities {
+      display: grid;
+      margin: 20px;
+      padding: 20px;
+      .location {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.189);
+          height: 400px;
+          border-radius: 20px;
+        }
+        .details {
+          margin: 30px;
+          width: 900px;
+          h1 {
+            font-size: 60px;
+            margin: 0;
+          }
+
+          p {
+            font-size: 20px;
+            margin: 10px 0px;
+          }
+          .visayan {
+            font-style: italic;
+          }
+        }
+      }
+    }
+    .facilities-rev {
+      display: grid;
+      margin: 20px;
+      padding: 20px;
+      .location {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row-reverse;
+        img {
+          height: 400px;
+          border-radius: 20px;
+        }
+        .details {
+          margin: 30px;
+          width: 900px;
+          h1 {
+            text-align: right;
+            font-size: 60px;
+            margin: 0;
+          }
+
+          p {
+            text-align: right;
+            font-size: 20px;
+            margin: 10px 0px;
+          }
+          .visayan {
+            font-style: italic;
+          }
+        }
+      }
+    }
+  }
+
+  .forms {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    h1 {
+      font-size: 80px;
+    }
+    .formsContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .singleform {
+        margin: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        h1 {
-          font-size: 100px;
-        }
-        p {
+        h3 {
+          box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
           text-align: center;
-          font-size: 20px;
-          width: 800px;
-        }
-        .homeBtns {
-          margin: 20px;
-          button {
-            border: none;
-            box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.209);
-            border-radius: 10px;
-            background-color: skyblue;
-            margin: 0px 10px;
-            width: 200px;
-            padding: 20px;
-          }
-        }
-      }
-    }
-
-    .offeredProgram {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      svg {
-        z-index: -1;
-        position: absolute;
-        height: 1000px;
-      }
-      h1 {
-        color: navy;
-        font-size: 100px;
-      }
-      .programContainer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .contentCard {
-          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.151);
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          flex-direction: column;
-          border-radius: 10px;
-          padding: 10px;
-          background-image: linear-gradient(
-            45deg,
-            rgb(255, 246, 246),
-            rgb(235, 235, 255)
-          );
-          width: 320px;
-          height: 500px;
-          margin: 20px;
-
-          h3 {
-            width: 250px;
-          }
-
-          p {
-            width: 250px;
-          }
-
-          button {
-            margin: 5px 10px;
-            padding: 20px;
-            width: 200px;
-            background-color: navy;
-            border: none;
-            border-radius: 5px;
-            transition: 0.5s;
-
-            &:hover {
-              cursor: pointer;
-              scale: 1.01;
-            }
-
-            a {
-              text-decoration: none;
-              color: white;
-            }
-          }
-        }
-      }
-    }
-    .enrollmentforms{
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        min-height: 100vh;
-
-      .leftContents{
-        display: flex;
-        align-items: center;
-        justify-content: right;
-        svg{
-          height: 800px;
-          position: absolute;
-          z-index: -1;
-        }
-        h1{
-          line-height: 80px;
-          color: navy;
-          font-size: 80px;
-        }
-      }
-      .rightcontent{
-        img{
-          height: 800px;
-        }
-      }
-    }
-    .wtg{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
-      background-image: linear-gradient(to bottom, white, rgb(207, 207, 255) 90%);
-      h1{
-        margin-bottom: 40px;
-        font-size: 80px;
-      }
-      
-      .facilities{
-        display: grid;
-        margin: 20px;
-        padding: 20px;
-        .location{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          img{
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.189);
-            height: 400px;
-            border-radius: 20px;
-          }
-          .details{
-            margin: 30px;
-            width: 900px;
-            h1{
-              font-size: 60px;
-              margin: 0;
-            }
-            
-            p{
-              font-size: 20px;
-              margin: 10px 0px;
-            }
-            .visayan{
-              font-style: italic;
-            }
-          }
-        }
-      }
-      .facilities-rev{
-        display: grid;
-        margin: 20px;
-        padding: 20px;
-        .location{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: row-reverse;
-          img{
-            height: 400px;
-            border-radius: 20px;
-          }
-          .details{
-            margin: 30px;
-            width: 900px;
-            h1{
-              text-align: right;
-              font-size: 60px;
-              margin: 0;
-            }
-            
-            p{
-              text-align: right;
-              font-size: 20px;
-              margin: 10px 0px;
-            }
-            .visayan{
-              font-style: italic;
-            }
-          }
-        }
-      }
-    }
-
-    .forms{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
-      h1{
-        font-size: 80px;
-      }
-      .formsContainer{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .singleform{
           margin: 10px;
+          padding: 10px;
+          width: 200px;
+          border-radius: 20px;
+        }
+        .formImages {
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-direction: column;
-          h3{
+          img {
             box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
-            text-align: center;
-            margin: 10px;
-            padding: 10px;
-            width: 200px;
-            border-radius: 20px;
-          }
-          .formImages{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img{
-              box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
-              height: 250px;
-            }
+            height: 250px;
           }
         }
-       
       }
-    }
-    .diploma{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .shortTerm{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .communityBased{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .contact{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .feedBack{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
     }
   }
+  .diploma {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  .shortTerm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  .communityBased {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  .feedBack {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+}
