--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -34,6 +34,7 @@ body {
   display: flex;
 }
 .sideBar {
+  z-index: 1;
   position: sticky;
   top: 0;
   display: flex;
@@ -227,13 +228,11 @@ main {
         align-items: center;
         margin: 20px;
         flex-direction: column;
-        
-        
-        h3{
+
+        h3 {
           font-size: 30px;
           margin: 20px;
         }
-        
       }
     }
     .facilities {
@@ -303,40 +302,130 @@ main {
   }
 
   .forms {
+    background-image: linear-gradient(to top, white, rgb(207, 207, 255) 90%);
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
-    h1 {
-      font-size: 80px;
-    }
-    .formsContainer {
+    .headForm {
       display: flex;
-      justify-content: center;
       align-items: center;
-      .singleform {
-        margin: 10px;
+      justify-content: center;
+
+      img {
+        height: 300px;
+        width: 1800px;
+        object-fit: cover;
+        position: absolute;
+        z-index: -1;
+        border-radius: 20px;
+        opacity: 0.8;
+      }
+
+      h1 {
+        margin: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
-        h3 {
-          box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
-          text-align: center;
+        padding: 100px;
+        height: 300px;
+        color: white;
+        width: 1700px;
+        background-image: url("../assets/images/admin/AdminLounge.jpeg");
+        font-size: 100px;
+        background-size: cover;
+        background-position: center;
+        backdrop-filter: blur(10px);
+        border-radius: 20px;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.229);
+      }
+    }
+    .formContents {
+      background-color: whitesmoke;
+      padding: 50px 100px;
+      border-radius: 20px;
+      .formsContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .singleform {
           margin: 10px;
-          padding: 10px;
-          width: 200px;
-          border-radius: 20px;
-        }
-        .formImages {
           display: flex;
           justify-content: center;
           align-items: center;
-          img {
-            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
-            height: 250px;
+          flex-direction: column;
+          h2 {
+            margin: 10px;
           }
+          h3 {
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
+            text-align: center;
+            margin: 10px;
+            padding: 10px;
+            width: 200px;
+            border-radius: 20px;
+          }
+          
+          .formImages {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img {
+              box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.284);
+              height: 210px;
+              margin: 5px 8px;
+            }
+          }
+        }
+      }
+      .formDescription {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        flex-direction: column;
+        svg{
+          position: absolute;
+          z-index: -1;
+        }
+        .frontContent,
+        .backContent {
+          margin: 100px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        
+        .txt{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          
+        }
+        }
+        .backContent {
+          flex-direction: row-reverse;
+        }
+        img {
+          height: 500px;
+        }
+        
+        p {
+          margin: 20px;
+          width: 500px;
+        }
+      }
+      .videoTutorial {
+        margin-top: 50px;
+        h1 {
+          font-size: 80px;
+        }
+        iframe {
+          margin: 50px 0px;
+          height: 800px;
+          width: 1500px;
+          border: none;
+          border-radius: 20px;
         }
       }
     }
