--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -446,6 +446,72 @@ main {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    flex-direction: column;
+    h1 {
+      font-size: 50px;
+      margin: 20px;
+    }
+    .bodyCourse {
+      padding: 40px;
+      border-radius: 20px;
+      background-color: white;
+      iframe {
+        height: 600px;
+        width: 1200px;
+        border: none;
+        border-radius: 20px;
+      }
+      .programdetails {
+        display: flex;
+        flex-wrap: wrap;
+        .courseCard {
+          margin: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          h3 {
+            text-align: center;
+            z-index: 1;
+            position: absolute;
+            width: 200px;
+            color: white;
+            transition: 0.5s ease; 
+            opacity: 1;
+          }
+          img {
+            filter: brightness(50%);
+            position: relative;
+            border-radius: 10px;
+            height: 400px;
+            width: 200px;
+            object-fit: cover;
+            transition: 0.5s ease;
+          }
+          .description{
+            opacity: 1;
+            position: absolute;
+            bottom: 10px;
+            padding: 10px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            z-index: 2;
+          }
+          &:hover {
+        
+            h3 {
+              display: none;
+            }
+            img {
+              width: 500px;
+            }
+          }
+         
+        }
+      }
+    }
   }
   .shortTerm {
     display: flex;
@@ -547,7 +613,7 @@ main {
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      h1{
+      h1 {
         font-size: 60px;
       }
       .note {
@@ -657,13 +723,13 @@ main {
           }
         }
       }
-      .submitbtn{
+      .submitbtn {
         margin: 50px 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        button{
+        button {
           background-color: navy;
           border-radius: 10px;
           border: none;
@@ -671,9 +737,7 @@ main {
           padding: 20px;
           width: 500px;
         }
-        
       }
-      
     }
   }
 }
