--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -464,20 +464,34 @@ main {
       .programdetails {
         display: flex;
         flex-wrap: wrap;
+        max-width: 1300px;
         .courseCard {
           margin: 10px;
           display: flex;
           justify-content: center;
           align-items: center;
-
-          h3 {
-            text-align: center;
-            z-index: 1;
+          flex-direction: column;
+          h3{
             position: absolute;
+            text-align: center;
             width: 200px;
+            font-size: 40px;
             color: white;
-            transition: 0.5s ease; 
-            opacity: 1;
+          }
+          p{
+            display: none;
+            font-size: 16px;
+            width: 450px;
+            color: white;
+            position: absolute;
+            z-index: 1;
+            transition: 0.5s ease;
+            width: 450px;
+            text-align: center;
+            span{
+              font-weight: 700;
+              font-size: 25px;
+            }
           }
           img {
             filter: brightness(50%);
@@ -488,24 +502,18 @@ main {
             object-fit: cover;
             transition: 0.5s ease;
           }
-          .description{
-            opacity: 1;
-            position: absolute;
-            bottom: 10px;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            text-align: center;
-            border-radius: 5px;
-            z-index: 2;
-          }
+
           &:hover {
-        
-            h3 {
-              display: none;
-            }
+            transition: 0.5s;
+            cursor: pointer;
             img {
               width: 500px;
+            }
+            h3{
+              display: none;
+            }
+            p{
+              display: block;
             }
           }
          
