--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -52,9 +52,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 10px;
     a {
-      padding: 20px 50px;
+      /* outline: 1px solid red; */
+      text-decoration: none;
+      display: flex;
+      justify-content: center; 
+      align-items: center;
+      flex-direction: column;
+      width: 150px;
+      padding: 15px 0px;
+      p{
+        color: black;
+       font-weight: 600;
+       margin-top: 5px;
+       font-size: 14px;
+      }
       img {
         height: 25px;
       }
