--- a/assets/home.css
+++ b/assets/home.css
@@ -289,7 +289,7 @@
         font-size: 70px;
         color: navy;
         width: 700px;
-        line-height: 60px;
+        line-height: 80px;
       }
 
       p {
@@ -298,4 +298,12 @@
       }
     }
     
+  }
+
+  .translator{
+    display: flex;
+    position: fixed;
+    margin: 10px 20px;
+    bottom: 0;
+    right: 0;
   }
