--- a/assets/home.css
+++ b/assets/home.css
@@ -63,6 +63,7 @@
           width: 200px;
           background-color: navy;
           border: none;
+          color: white;
           border-radius: 5px;
           transition: 0.5s;
 
@@ -80,6 +81,144 @@
     }
   }
 
+  #diploma, #shortCate, #cbtModal, #shorterModal, #cbtprogramModal {
+    border: none;
+    border-radius: 10px;
+    width: 900px;
+    padding: 20px;
+    .tblheader{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      button{
+        padding: 5px;
+        width: 100px;
+      }
+
+    }
+
+    .stcards {
+      margin: 20px;
+      align-items: center;
+      justify-content: center;
+      display: grid;
+      gap: 10px;
+      grid-template-columns: 400px 400px;
+      h2 {
+        color: white;
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.111);
+        padding: 20px;
+        border-radius: 10px;
+        background-color: rgb(32, 0, 51);
+        &:hover {
+          cursor: pointer;
+          background-color: rgb(63, 1, 99);
+        }
+      }
+    }
+    .courseCard {
+      margin: 20px;
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      grid-template-columns: 600px;
+      gap: 20px;
+
+      .left {
+        width: 600px;
+        h1 {
+          text-align: center;
+          font-size: 30px;
+          margin-bottom: 10px;
+        }
+        .btns {
+          align-items: left;
+          justify-content: center;
+          display: grid;
+          grid-template-columns: 200px 200px;
+          gap: 10px;
+          h3 {
+            border-radius: 10px;
+            color: white;
+            background-color: navy;
+            padding: 15px;
+            text-align: center;
+            background-color: rgb(32, 0, 51);
+            &:hover {
+              cursor: pointer;
+              background-color: rgb(63, 1, 99);
+            }
+          }
+        }
+      }
+
+      .right {
+        width: 600px;
+        h1 {
+          text-align: center;
+          font-size: 30px;
+          margin-bottom: 10px;
+        }
+        .btns {
+          align-items: center;
+          justify-content: center;
+          display: grid;
+          grid-template-columns: 280px 280px;
+          gap: 10px;
+          h3 {
+            border-radius: 10px;
+            font-size: 15px;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            background-color: rgb(32, 0, 51);
+            &:hover {
+              cursor: pointer;
+              background-color: rgb(63, 1, 99);
+            }
+          }
+        }
+      }
+    }
+    
+  }
+
+  table {
+    background-color: whitesmoke;
+     tr, td{
+      &:hover {
+        background-color: rgb(207, 207, 207);
+      }
+    }
+    th {
+      text-align: center;
+      padding: 15px;
+     
+    }
+    td {
+      padding: 20px;
+     
+    }
+  }
+
+  #shortermTbl, #diplomaTbl {
+    background-color: whitesmoke;
+     tr, td{
+      &:hover {
+        background-color: rgb(207, 207, 207);
+      }
+    }
+    th {
+      text-align: center;
+      padding: 15px;
+     
+    }
+    td {
+      padding: 20px;
+     width: 100%;
+    }
+  }
+  
   #feedBackForm {
     padding: 50px 30px;
     border-radius: 10px;
